backport release version to 1.19

--- a/src/main/resources/assets/moblootblock/lang/en_us.json
+++ b/src/main/resources/assets/moblootblock/lang/en_us.json
@@ -1,10 +1,12 @@
 {
   "itemGroup.moblootblock": "Mob Loot Block",
+  "itemGroup.tab_moblootblock": "Mob Loot Block",
 
   "enchantment.moblootblock.moblootblockdrops": "Curse of Essence Binding",
 
   "moblootblock.description_shift": "Press Shift for More Info:",
   "moblootblock.moblootblock.tooltip_crafting": "Craft by Combining 9 Chunks of a specific mob together in a crafting bench.",
+  "moblootblock.moblootblock.tooltip_notallowed": "This Block is Unobtainable from Crafting",
   "moblootblock.moblootblock.tooltip_drops": "Breaking this block will drop mob specific loot.",
   "moblootblock.moblootblock.tooltip_silktouch": "(Can be Picked Up with Silktouch)",
   "moblootblock.moblootblock.tooltip_shiftmsg": "While Crouching, 'Placing' the block will instead spawn the respective mob",
